--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,11 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/Debug)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Release)
 
 # Manager submodules
-## Submodules X (example)
-# SET(MODULE_X_DIR ${CMAKE_SOURCE_DIR}/submodules/module_x)
-# AUX_SOURCE_DIRECTORY(${MODULE_X_DIR}/src MODULE_X_PROGRAM)
-# INCLUDE_DIRECTORIES(${MODULE_X_DIR}/include)
-# ADD_LIBRARY(ModuleX ${MODULE_X_PROGRAM})
+## DataStructures
+SET(DATA_STRUCT_DIR ${CMAKE_SOURCE_DIR}/submodules/data_structures)
+AUX_SOURCE_DIRECTORY(${DATA_STRUCT_DIR}/src DATA_STRUCT_PROGRAM)
+INCLUDE_DIRECTORIES(${DATA_STRUCT_DIR}/include)
+ADD_LIBRARY(DataStructures ${DATA_STRUCT_PROGRAM})
 
 # Get all files in the folders SRC_DIR and UNIT_TEST_DIR
 AUX_SOURCE_DIRECTORY(${SRC_DIR} PROGRAM)
@@ -47,12 +47,12 @@ INCLUDE_DIRECTORIES(${INC_DIR})
 INCLUDE_DIRECTORIES(${INC_DIR}/lib)
 
 # Define the program lib
-ADD_LIBRARY(mylibname ${PROGRAM})
+ADD_LIBRARY(SudokuSolver ${PROGRAM})
 
 # Make executables
 ADD_EXECUTABLE(program ${PROGRAM})
 ADD_EXECUTABLE(unit_test ${UNIT_TESTS})
 
 # Link libs
-TARGET_LINK_LIBRARIES(unit_test mylibname)
-# TARGET_LINK_LIBRARIES(mylibname ModuleX)
+TARGET_LINK_LIBRARIES(SudokuSolver DataStructures)
+TARGET_LINK_LIBRARIES(unit_test SudokuSolver)
