--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,18 @@ AUX_SOURCE_DIRECTORY(${DATA_STRUCT_DIR}/src DATA_STRUCT_PROGRAM)
 INCLUDE_DIRECTORIES(${DATA_STRUCT_DIR}/include)
 ADD_LIBRARY(DataStructures ${DATA_STRUCT_PROGRAM})
 
+## DataStructures
+SET(GEOMETRIC_ALGORITHMS_DIR ${CMAKE_SOURCE_DIR}/submodules/geometric_algorithms)
+AUX_SOURCE_DIRECTORY(${GEOMETRIC_ALGORITHMS_DIR}/src GEOMETRIC_ALGORITHMS_PROGRAM)
+INCLUDE_DIRECTORIES(${GEOMETRIC_ALGORITHMS_DIR}/include)
+ADD_LIBRARY(GeometricAlgorithms ${GEOMETRIC_ALGORITHMS_PROGRAM})
+
+## Sorting Algorithms
+SET(SORT_ALG_DIR ${CMAKE_SOURCE_DIR}/submodules/sorting_algorithms)
+AUX_SOURCE_DIRECTORY(${SORT_ALG_DIR}/src SORT_ALG_PROGRAM)
+INCLUDE_DIRECTORIES(${SORT_ALG_DIR}/include)
+ADD_LIBRARY(SortingAlgorithms ${SORT_ALG_PROGRAM})
+
 # Get all files in the folders SRC_DIR and UNIT_TEST_DIR
 AUX_SOURCE_DIRECTORY(${SRC_DIR} PROGRAM)
 AUX_SOURCE_DIRECTORY(${UNIT_TEST_DIR} UNIT_TESTS)
@@ -54,5 +66,9 @@ ADD_EXECUTABLE(program ${PROGRAM})
 ADD_EXECUTABLE(unit_test ${UNIT_TESTS})
 
 # Link libs
+TARGET_LINK_LIBRARIES(GeometricAlgorithms DataStructures)
+TARGET_LINK_LIBRARIES(SortingAlgorithms DataStructures)
+TARGET_LINK_LIBRARIES(GeometricAlgorithms SortingAlgorithms)
+TARGET_LINK_LIBRARIES(SudokuSolver GeometricAlgorithms)
 TARGET_LINK_LIBRARIES(SudokuSolver DataStructures)
-TARGET_LINK_LIBRARIES(unit_test SudokuSolver)
+TARGET_LINK_LIBRARIES(unit_test SudokuSolver DataStructures GeometricAlgorithms)
