--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,26 +32,8 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/Debug)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Release)
 
-# Manager submodules
-## DataStructures
-SET(DATA_STRUCT_DIR ${CMAKE_SOURCE_DIR}/submodules/data_structures)
-AUX_SOURCE_DIRECTORY(${DATA_STRUCT_DIR}/src DATA_STRUCT_PROGRAM)
-INCLUDE_DIRECTORIES(${DATA_STRUCT_DIR}/include)
-ADD_LIBRARY(DataStructures ${DATA_STRUCT_PROGRAM})
-
-## DataStructures
-SET(GEOMETRIC_ALGORITHMS_DIR ${CMAKE_SOURCE_DIR}/submodules/geometric_algorithms)
-AUX_SOURCE_DIRECTORY(${GEOMETRIC_ALGORITHMS_DIR}/src GEOMETRIC_ALGORITHMS_PROGRAM)
-INCLUDE_DIRECTORIES(${GEOMETRIC_ALGORITHMS_DIR}/include)
-ADD_LIBRARY(GeometricAlgorithms ${GEOMETRIC_ALGORITHMS_PROGRAM})
-
-## Sorting Algorithms
-SET(SORT_ALG_DIR ${CMAKE_SOURCE_DIR}/submodules/sorting_algorithms)
-AUX_SOURCE_DIRECTORY(${SORT_ALG_DIR}/src SORT_ALG_PROGRAM)
-INCLUDE_DIRECTORIES(${SORT_ALG_DIR}/include)
-ADD_LIBRARY(SortingAlgorithms ${SORT_ALG_PROGRAM})
-
 # Get all files in the folders SRC_DIR and UNIT_TEST_DIR
+AUX_SOURCE_DIRECTORY(${SRC_DIR}/lib LIBRARY_SOURCES)
 AUX_SOURCE_DIRECTORY(${SRC_DIR} PROGRAM)
 AUX_SOURCE_DIRECTORY(${UNIT_TEST_DIR} UNIT_TESTS)
 
@@ -60,15 +42,12 @@ INCLUDE_DIRECTORIES(${INC_DIR}/lib)
 
 # Define the program lib
 ADD_LIBRARY(SudokuSolver ${PROGRAM})
+ADD_LIBRARY(SudokuSolverLib ${LIBRARY_SOURCES})
 
 # Make executables
 ADD_EXECUTABLE(sudoku_solver ${PROGRAM})
 ADD_EXECUTABLE(unit_test ${UNIT_TESTS})
 
 # Link libs
-TARGET_LINK_LIBRARIES(SortingAlgorithms DataStructures)
-TARGET_LINK_LIBRARIES(GeometricAlgorithms SortingAlgorithms DataStructures)
-TARGET_LINK_LIBRARIES(GeometricAlgorithms SortingAlgorithms)
-TARGET_LINK_LIBRARIES(SudokuSolver GeometricAlgorithms SortingAlgorithms DataStructures)
-TARGET_LINK_LIBRARIES(sudoku_solver SudokuSolver)
+TARGET_LINK_LIBRARIES(sudoku_solver SudokuSolver SudokuSolverLib)
 TARGET_LINK_LIBRARIES(unit_test SudokuSolver)
